share вынесен в dwt шаблон

--- a/app/about.html
+++ b/app/about.html
@@ -249,6 +249,10 @@
 </div>
 <!-- =/main-->
 
+<!-- InstanceBeginEditable name="EditRegion5" -->
+<!-- InstanceEndEditable -->
+
+
 <!-- =footer -->
 <footer>
 	<div class="footer__top">
