--- a/app/service.html
+++ b/app/service.html
@@ -176,7 +176,7 @@
 
 				<table cellpadding="0" cellspacing="0" width="100%">
 					<tr>
-						<td width="320"><em><a href="#">Замена проводки в 1-комнатной квартире</em></td>
+						<td width="320"><em><a href="#">Замена проводки в 1-комнатной квартире</a></em></td>
 						<td><em>от 22.200 руб.</em></td>
 					</tr>
 					<tr>
@@ -330,6 +330,18 @@
 	</div>
 </div>
 <!-- =/main-->
+
+<!-- InstanceBeginEditable name="EditRegion5" -->
+<!-- =share -->
+<div class="share flexbox text-center">
+	<div class="container">
+		<p>Поделитесь с друзьями нашим проектом!</p>
+		<div class="ya-share2" data-services="collections,vkontakte,facebook,odnoklassniki,moimir,gplus,twitter,linkedin,lj,viber,whatsapp,skype,telegram"></div>
+	</div>
+</div>
+<!-- =/share -->
+<!-- InstanceEndEditable -->
+
 
 <!-- =footer -->
 <footer>
