--- a/app/services.html
+++ b/app/services.html
@@ -151,18 +151,24 @@
 				</a>
 			</div>
 		</section>
-	
-		<!-- =share -->
-		<div class="share flexbox text-center">
-			<p>Поделитесь с друзьями нашим проектом!</p>
-			<div class="ya-share2" data-services="collections,vkontakte,facebook,odnoklassniki,moimir,gplus,twitter,linkedin,lj,viber,whatsapp,skype,telegram"></div>
-		</div>
-		<!-- =/share -->
+
 
 <!-- InstanceEndEditable -->			
 	</div>
 </div>
 <!-- =/main-->
+
+<!-- InstanceBeginEditable name="EditRegion5" -->
+<!-- =share -->
+<div class="share flexbox text-center">
+	<div class="container">
+		<p>Поделитесь с друзьями нашим проектом!</p>
+		<div class="ya-share2" data-services="collections,vkontakte,facebook,odnoklassniki,moimir,gplus,twitter,linkedin,lj,viber,whatsapp,skype,telegram"></div>
+	</div>
+</div>
+<!-- =/share -->
+<!-- InstanceEndEditable -->
+
 
 <!-- =footer -->
 <footer>
