Обновлена раздаточная и описание

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
 	<li><a href="homepage.html" target="_blank">Главная</a></li>
 	<li><a href="about.html" target="_blank">О нас</a></li>
 	<li><a href="services.html" target="_blank">Услуги</a></li>
+	<li><a href="service.html" target="_blank">Услуга</a></li>
 </ol>
 
 </body>
