Удалены лишние js подключения. Создана страница "Цены"

--- a/app/price.html
+++ b/app/price.html
@@ -11,7 +11,7 @@
 
 <meta name="robots" content="noindex,nofollow" />
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Услуги</title>
+<title>Цены</title>
 <!-- InstanceEndEditable -->
 <link rel="stylesheet" href="/template/css/jquery.bxslider.css" />
 <link rel="stylesheet" href="/template/css/styles.min.css" />
@@ -106,52 +106,134 @@
 		<div class="breadcrumbs">
 			<ul class="B_crumbBox">
 				<li class="B_crumb"><a href="/" title="" class="B_crumb">главная</a></li>
-				<li class="B_lastCrumb"><span class="B_currentCrumb">услуги</span></li>
+				<li class="B_lastCrumb"><span class="B_currentCrumb">Цены</span></li>
 			</ul>
 		</div>
 		<!-- =/breadcrumbs -->
 		
+		<main class="text">
+			<h1 class="title">Стоимость работ по электрике</h1>
+			<p>Наши электрики выполняют самые разные работы. Многообразие видов работ и условий их исполнения непросто уместить на небольшой странице сайта. Поэтому здесь мы размещаем цены на самые запрашиваемые виды работ.</p>
+			<p>Для уточнения стоимости услуг электрика позвоните нам или заполните форму обратной связи внизу страницы: укажите Ваши контакты, город, куда нужно будет выехать, и опишите, что нужно будет делать.</p>
+<br>
+			<h2 style="color: #307a56">ПРАЙС-ЛИСТ “ЩЕЛКОВОЭЛЕКТРИК”</h2>
+			<table cellpadding="0" cellspacing="0" width="100%">
+				<tr>
+					<td width="800"><em><a href="#" title="">Замена / ремонт розетки / выключателя</a></em></td>
+					<td><em>от 350 руб.</em></td>
+				</tr>
+				<tr>
+					<td><em><a href="#" title="">Установка розетки / выключателя на новом месте</a></em></td>
+					<td><em>от 500 руб.</em></td>
+				</tr>
+				<tr>
+					<td><em><a href="#" title="">Монтаж люстры на крючок</a></em></td>
+					<td><em>от 500 руб.</em></td>
+				</tr>
+				<tr>
+					<td><em><a href="#" title="">Монтаж люстры с потолочным креплением</a></em></td>
+					<td><em>от 800 руб.</em></td>
+				</tr>
+				<tr>
+					<td><em><a href="#" title="">Замена веревочного выключателя на кнопочный</a></em></td>
+					<td><em>от 1.500 руб.</em></td>
+				</tr>
+				<tr>
+					<td><em><a href="#" title="">Установка однополюсного автомата</a></em></td>
+					<td><em>от 500 руб.</em></td>
+				</tr>
+				<tr>
+					<td><em><a href="#" title="">Поиск и устранение неисправности (обрыв / короткое замыкание) в стандартной электропроводке</a></em></td>
+					<td><em>от 1.500 руб.</em></td>
+				</tr>
+				<tr>
+					<td><em><a href="#" title="">Поиск и устранение неисправности (обрыв / короткое замыкание) в НЕстандартной электропроводке</a></em></td>
+					<td><em>от 3.000 руб.</em></td>
+				</tr>
+				<tr>
+					<td><em><a href="#" title="">Установка УЗО</a></em></td>
+					<td><em>от 1.000 руб.</em></td>
+				</tr>
+				<tr>
+					<td><em><a href="#" title="">Прокладка провода в кабель-канале</a></em></td>
+					<td><em>от 150 руб.</em></td>
+				</tr>
+				<tr>
+					<td><em><a href="#" title="">Монтаж электрического щитка внешнего</a></em></td>
+					<td><em>от 500 руб.</em></td>
+				</tr>
+				<tr>
+					<td><em><a href="#" title="">Монтаж электрического щитка внутреннего (утапливание в стену путем штробления)</a></em></td>
+					<td><em>от 2.000 руб.</em></td>
+				</tr>
+			</table>
 
-		<section class="allservices">
-			<header>
-				<h1>Услуги нашей компании</h1>
-			</header>
-			<div class="text">
-				<p>Электромонтажные работы в небольшой современном гараже частного дома, с кухней, комнатой отдыха и сан.узлом. Черновой монтаж производился не мной, мне лишь досталось "счастье" доделывать чистовой монтаж. Подрозетники яйцом или не в один уровень, провода коротыши торчащие из стен, потолка и подрозетников, облицовка в виде керамогранита, которая местами мешала нормальной установке розеток и выключателей.</p>					
-			</div>
+			<br />
+			<h2 style="color: #307a56">МОНТАЖ РОЗЕТОК И ВЫКЛЮЧАТЕЛЕЙ</h2>
+			<table cellpadding="0" cellspacing="0" width="100%">
+				<tr>
+					<td width="400"><em><a href="#">накладной выключатель</a></em></td>
+					<td><em>от 350 руб.</em></td>
+				</tr>
+				<tr>
+					<td><em><a href="#">проходной выключатель (внутренний)</a></em></td>
+					<td><em>от 400 руб.</em></td>
+				</tr>
+				<tr>
+					<td><em><a href="#">проходной выключатель (накладной)</a></em></td>
+					<td><em>от 500 руб.</em></td>
+				</tr>
+				<tr>
+					<td><em><a href="#">внутренняя розетка</a></em></td>
+					<td><em>от 250 руб.</em></td>
+				</tr>
+				<tr>
+					<td><em><a href="#">накладная розетка</a></em></td>
+					<td><em>от 350 руб.</em></td>
+				</tr>
+				<tr>
+					<td><em><a href="#">внутренний выключатель</a></em></td>
+					<td><em>от 250 руб.</em></td>
+				</tr>
+				<tr>
+					<td><em><a href="#">коммутация распаечной коробки</a></em></td>
+					<td><em>от 450 руб.</em></td>
+				</tr>
+			</table>
+			<br />
 
-			<div class="allservices__item" style="background-image: url(images/service-work.jpg);">
-				<a href="#" title="" class="allservices__link">
-					<h2 class="allservices__item-title">Электромонтажные работы</h2>
-					<p>Осуществляем электромонтажные работы любой сложности для физических и юридических лиц. Наши электрики готовы выехать по вызову в любое время — днём и ночью, прибудут на объект не позже чем через 2 часа после звонка. В случае аварийной ситуации экстренный выезд осуществляется в течение часа. Опыт и знания позволяют нам не допускать ошибок в работе и избегать лишних затрат, поэтому мы можем позволить себе низкие цены на электромонтаж и 3 года гарантии.</p>
-				</a>
-			</div>
-			<div class="allservices__item" style="background-image: url(images/service-montage.jpg);">
-				<a href="#" title="" class="allservices__link">
-					<h2 class="allservices__item-title">Монтаж электропроводки</h2>
-					<p>Предлагаем свои услуги по монтажу электропроводки «под ключ» для квартир и частных домов, коттеджей, офисов, производственных помещений: от разработки проекта и составления сметы до запуска системы в работу и установки бытовой техники. В штате компании только профессиональные электрики с профильным образованием и стажем работы от 5 лет. В результате вы получаете полностью рабочую, готовую к эксплуатации и безопасную сеть с гарантией на 3 года.</p>
-				</a>
-			</div>
-			<div class="allservices__item" style="background-image: url(images/service-wiring.jpg);">
-				<a href="#" title="" class="allservices__link">
-					<h2 class="allservices__item-title">Разводка электрики</h2>
-					<p>Электромонтаж в многоквартирных и частных домах, коттеджах имеет некоторые существенные различия, которые важно учитывать при разводке электрики. Чтобы обеспечить разводку проводки в загородном доме, особняке или на даче, важно учитывать характеристики систем безопасности, установленных на придомовой территории; характеристики наружного освещения, датчиков движения и т. д.</p>
-				</a>
-			</div>
-			<div class="allservices__item" style="background-image: url(images/service-replace.jpg);">
-				<a href="#" title="" class="allservices__link">
-					<h2 class="allservices__item-title">Замена проводки</h2>
-					<p>Поможем поменять проводку независимо от сложности задачи, объёмов работ и давности последнего обновления электросистемы. Производим замену электропроводки и всей электрики с гарантией на 3 года. Обеспечим замену электросетей в любой квартире, независимо от площади и состояния. Все электрики имеют необходимые документы и допуски для работы, профильное образование и опыт работы не менее 5 лет.</p>
-				</a>
-			</div>
-			<div class="allservices__item" style="background-image: url(images/service-repairs.jpg);">
-				<a href="#" title="" class="allservices__link">
-					<h2 class="allservices__item-title">Ремонт электрики</h2>
-					<p>Предоставляем услуги по ремонту электрики в частных домах и квартирах и комплексному ремонту электропроводки на крупных промышленных, производственных объектах. Опыт и профессиональные навыки наших электриков позволяют избегать лишних расходов на исправление ошибок при электромонтаже, благодаря чему работы проводятся быстрее и стоимость услуг остаётся доступной. При особо крупных заказах и постоянным клиентам предоставляются скидки.</p>
-				</a>
-			</div>
-		</section>
-
+			<h2 style="color: #307a56">ПРОКЛАДКА КАБЕЛЯ</h2>
+			<table cellpadding="0" cellspacing="0" width="100%">
+				<tr>
+					<td width="400"><a href="#">укладка кабеля на скобках</a></td>
+					<td>от 70 руб.</td>
+				</tr>
+				<tr>
+					<td><a href="#">укладка кабеля в кабель-канале</a></td>
+					<td>от 50 руб.</td>
+				</tr>
+				<tr>
+					<td><a href="#">монтаж кабеля в гофре</a></td>
+					<td>от 100 руб.</td>
+				</tr>
+				<tr>
+					<td><a href="#">укладка кабеля в штробе</a></td>
+					<td>от 70 руб.</td>
+				</tr>
+				<tr>
+					<td><a href="#">укладка кабеля в штробе с замазкой</a></td>
+					<td>от 150 руб.</td>
+				</tr>
+				<tr>
+					<td><a href="#">монтаж кабель-канала</a></td>
+					<td>от 80 руб.</td>
+				</tr>
+				<tr>
+					<td><a href="#">монтаж кабель-канала на потолке</a></td>
+					<td>от 150 руб.</td>
+				</tr>
+			</table>
+		</main>
 
 <!-- InstanceEndEditable -->			
 	</div>
@@ -159,14 +241,7 @@
 <!-- =/main-->
 
 <!-- InstanceBeginEditable name="EditRegion5" -->
-<!-- =share -->
-<div class="container">
-	<div class="share flexbox text-center">
-		<p>Поделитесь с друзьями нашим проектом!</p>
-		<div class="ya-share2" data-services="collections,vkontakte,facebook,odnoklassniki,moimir,gplus,twitter,linkedin,lj,viber,whatsapp,skype,telegram"></div>
-	</div>
-</div>
-<!-- =/share -->
+
 <!-- InstanceEndEditable -->
 
 
