--- a/app/service.html
+++ b/app/service.html
@@ -52,8 +52,8 @@
 							</ul>
 						</div>
 					</li>
-					<li><a class="nav-link" href="#" title="">Цены</a></li>
-					<li><a class="nav-link" href="#" title="">Наши работы</a></li>
+					<li><a class="nav-link" href="price.html" title="">Цены</a></li>
+					<li><a class="nav-link" href="our-works.html" title="">Наши работы</a></li>
 					<li>
 						<a class="nav-link" href="#" title="">Интересное</a>
 					  <div class="subnav">
