Добавлена страница "фотокарточки"

--- a/app/our-works-photocard.html
+++ b/app/our-works-photocard.html
@@ -11,7 +11,7 @@
 
 <meta name="robots" content="noindex,nofollow" />
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Наши работы - Видео</title>
+<title>Наши работы - Фото</title>
 <!-- InstanceEndEditable -->
 <link rel="stylesheet" href="/template/css/jquery.bxslider.css" />
 <link rel="stylesheet" href="/template/css/styles.min.css" />
@@ -106,155 +106,72 @@
 		<div class="breadcrumbs">
 			<ul class="B_crumbBox">
 				<li class="B_crumb"><a href="/" title="" class="B_crumb">главная</a></li>
-				<li class="B_lastCrumb"><span class="B_currentCrumb">наши работы</span></li>
+				<li class="B_crumb"><a href="/" title="" class="B_crumb">наши работы</a></li>
+				<li class="B_lastCrumb"><span class="B_currentCrumb">проводка в квартире под ключ</span></li>
 			</ul>
 		</div>
 		<!-- =/breadcrumbs -->
-
-
-		<!-- =subcat -->
-		<div class="subcat">
-			<ul>
-				<li><a href="our-works-photo.html" title="">Фотографии</a></li>
-				<li class="current"><span>Видеоматериалы</span></li>
-			</ul>
-		</div>
-		<!-- =/subcat -->
 		
 
+		<h1 class="title">проводка в квартире под ключ</h1>
 		<div class="text">
 			Осуществляем электромонтажные работы любой сложности для физических и юридических лиц. Наши электрики готовы выехать по вызову в любое время - днём и ночью, прибудут на объект не позже чем через 2 часа после звонка. В случае аварийной ситуации экстренный выезд осуществляется в течение часа.
 		</div>
 
-		<div class="video flexbox">
-			<div class="video__item">
-				<a href="https://www.youtube.com/watch?v=_sI_Ps7JSEk&autoplay=1&rel=0" title="" data-fancybox>
-					<div class="video__pic">
-						<img src="images/photo/service-1.jpg" alt="" />
-					</div>
-					<div class="video__textbox">
-						<div class="flexbox">
-							<p class="video__shorttext">От замены проводки и распределения нагрузки по автоматам до установки розеток, выключателей, светильников.</p>
-						</div>
-					</div>
-				</a>
-			</div>
-			<div class="video__item">
-				<a href="https://www.youtube.com/watch?v=_sI_Ps7JSEk&autoplay=1&rel=0" title="" data-fancybox>
-					<div class="video__pic">
-						<img src="images/photo/service-2.jpg" alt="" />
-					</div>
-					<div class="video__textbox">
-						<div class="flexbox">
-							<p class="video__shorttext">От замены проводки и распределения нагрузки по автоматам до установки розеток, выключателей, светильников.</p>
-						</div>
-					</div>
-				</a>
-			</div>
-			<div class="video__item">
-				<a href="https://www.youtube.com/watch?v=_sI_Ps7JSEk&autoplay=1&rel=0" title="" data-fancybox>
-					<div class="video__pic">
-						<img src="images/photo/service-3.jpg" alt="" />
-					</div>
-					<div class="video__textbox">
-						<div class="flexbox">
-							<p class="video__shorttext">От замены проводки и распределения нагрузки по автоматам до установки розеток, выключателей, светильников.</p>
-						</div>
-					</div>
-				</a>
-			</div>
-			<div class="video__item">
-				<a href="https://www.youtube.com/watch?v=_sI_Ps7JSEk&autoplay=1&rel=0" title="" data-fancybox>
-					<div class="video__pic">
-						<img src="images/photo/service-4.jpg" alt="" />
-					</div>
-					<div class="video__textbox">
-						<div class="flexbox">
-							<p class="video__shorttext">От замены проводки и распределения нагрузки по автоматам до установки розеток, выключателей, светильников.</p>
-						</div>
-					</div>
-				</a>
-			</div>
-
-			<div class="video__item">
-				<a href="https://www.youtube.com/watch?v=_sI_Ps7JSEk&autoplay=1&rel=0" title="" data-fancybox>
-					<div class="video__pic">
-						<img src="images/photo/service-5.jpg" alt="" />
-					</div>
-					<div class="video__textbox">
-						<div class="flexbox">
-							<p class="video__shorttext">От замены проводки и распределения нагрузки по автоматам до установки розеток, выключателей, светильников.</p>
-						</div>
-					</div>
-				</a>
-			</div>
-			<div class="video__item">
-				<a href="https://www.youtube.com/watch?v=_sI_Ps7JSEk&autoplay=1&rel=0" title="" data-fancybox>
-					<div class="video__pic">
-						<img src="images/photo/service-6.jpg" alt="" />
-					</div>
-					<div class="video__textbox">
-						<div class="flexbox">
-							<p class="video__shorttext">От замены проводки и распределения нагрузки по автоматам до установки розеток, выключателей, светильников.</p>
-						</div>
-					</div>
-				</a>
-			</div>
-			<div class="video__item">
-				<a href="https://www.youtube.com/watch?v=_sI_Ps7JSEk&autoplay=1&rel=0" title="" data-fancybox>
-					<div class="video__pic">
-						<img src="images/photo/service-7.jpg" alt="" />
-					</div>
-					<div class="video__textbox">
-						<div class="flexbox">
-							<p class="video__shorttext">От замены проводки и распределения нагрузки по автоматам до установки розеток, выключателей, светильников.</p>
-						</div>
-					</div>
-				</a>
-			</div>
-			<div class="video__item">
-				<a href="https://www.youtube.com/watch?v=_sI_Ps7JSEk&autoplay=1&rel=0" title="" data-fancybox>
-					<div class="video__pic">
-						<img src="images/photo/service-8.jpg" alt="" />
-					</div>
-					<div class="video__textbox">
-						<div class="flexbox">
-							<p class="video__shorttext">От замены проводки и распределения нагрузки по автоматам до установки розеток, выключателей, светильников.</p>
-						</div>
-					</div>
-				</a>
-			</div>
-			<div class="video__item">
-				<a href="https://www.youtube.com/watch?v=_sI_Ps7JSEk&autoplay=1&rel=0" title="" data-fancybox>
-					<div class="video__pic">
-						<img src="images/photo/service-9.jpg" alt="" />
-					</div>
-					<div class="video__textbox">
-						<div class="flexbox">
-							<p class="video__shorttext">От замены проводки и распределения нагрузки по автоматам до установки розеток, выключателей, светильников.</p>
-						</div>
-					</div>
-				</a>
+		<div class="gallery">
+			<div class="flexbox">
+				<div class="gallery__item">
+					<a href="images/big-1.jpg" data-fancybox="gallery" title="">
+						<img src="images/works/work-6.jpg" alt="" />
+					</a>
+				</div>
+				<div class="gallery__item">
+					<a href="tmp/bgerwlzPQCQ.jpg" data-fancybox="gallery" title="">
+						<img src="images/works/work-7.jpg" alt="" />
+					</a>
+				</div>
+				<div class="gallery__item">
+					<a href="tmp/F1NHuB1isFo.jpg" data-fancybox="gallery" title="">
+						<img src="images/works/work-8.jpg" alt="" />
+					</a>
+				</div>
+				<div class="gallery__item">
+					<a href="tmp/full_g_003.jpg" data-fancybox="gallery" title="">
+						<img src="images/works/work-9.jpg" alt="" />
+					</a>
+				</div>
+				<div class="gallery__item">
+					<a href="tmp/full_g_005.jpg" data-fancybox="gallery" title="">
+						<img src="images/works/work-10.jpg" alt="" />
+					</a>
+				</div>
+				<div class="gallery__item">
+					<a href="tmp/F1NHuB1isFo.jpg" data-fancybox="gallery" title="">
+						<img src="images/works/work-11.jpg" alt="" />
+					</a>
+				</div>
+				<div class="gallery__item">
+					<a href="tmp/full_g_005.jpg" data-fancybox="gallery" title="">
+						<img src="images/works/work-12.jpg" alt="" />
+					</a>
+				</div>
+				<div class="gallery__item">
+					<a href="tmp/F1NHuB1isFo.jpg" data-fancybox="gallery" title="">
+						<img src="images/works/work-13.jpg" alt="" />
+					</a>
+				</div>
+				<div class="gallery__item">
+					<a href="tmp/full_g_005.jpg" data-fancybox="gallery" title="">
+						<img src="images/works/work-14.jpg" alt="" />
+					</a>
+				</div>
 			</div>
 		</div>
-
 
 		<div class="text">
 			<p>Осуществляем электромонтажные работы любой сложности для физических и юридических лиц. Наши электрики готовы выехать по вызову в любое время — днём и ночью, прибудут на объект не позже чем через 2 часа после звонка. В случае аварийной ситуации экстренный выезд осуществляется в течение часа.</p>
 			<p>Опыт и знания позволяют нам не допускать ошибок в работе и избегать лишних затрат, поэтому мы можем позволить себе низкие цены на электромонтаж и 3 года гарантии на любой вид услуг по электрике. С каждым заказчиком заключается договор, в котором прописывается график работ и окончательная стоимость.</p>
 		</div>
-
-
-	
-		<!-- =pagination -->
-		<div class="pagination">
-			<a href="#">1</a>
-			<span class="current">2</span>
-			<a href="#">3</a>
-			<a href="#">4</a>
-			<a href="#">5</a>
-		</div>
-		<!-- =/pagination -->
 
 <!-- InstanceEndEditable -->			
 	</div>
