--- a/app/our-works-photo.html
+++ b/app/our-works-photo.html
@@ -53,7 +53,7 @@
 						</div>
 					</li>
 					<li><a class="nav-link" href="price.html" title="">Цены</a></li>
-					<li><a class="nav-link" href="our-works.html" title="">Наши работы</a></li>
+					<li><a class="nav-link" href="our-works-photo.html" title="">Наши работы</a></li>
 					<li>
 						<a class="nav-link" href="#" title="">Интересное</a>
 					  <div class="subnav">
@@ -61,7 +61,7 @@
 								<li><a href="articles.html" title="">Статьи</a></li>
 								<li><a href="news.html" title="">Новости</a></li>
 								<li><a href="faq.html" title="">Вопрос? Ответ!</a></li>
-								<li><a href="#" title="">Отзывы о нашей работе</a></li>
+								<li><a href="reviews.html" title="">Отзывы о нашей работе</a></li>
 							</ul>
 						</div>
 					</li>
@@ -128,7 +128,7 @@
 
 		<div class="photo flexbox">
 			<div class="photo__item">
-				<a href="#" title="">
+				<a href="our-works-photocard.html" title="">
 					<div class="photo__pic">
 						<img src="images/photo/service-1.jpg" alt="" />
 					</div>
@@ -142,7 +142,7 @@
 				</a>
 			</div>
 			<div class="photo__item">
-				<a href="#" title="">
+				<a href="our-works-photocard.html" title="">
 					<div class="photo__pic">
 						<img src="images/photo/service-2.jpg" alt="" />
 					</div>
@@ -156,7 +156,7 @@
 				</a>
 			</div>
 			<div class="photo__item">
-				<a href="#" title="">
+				<a href="our-works-photocard.html" title="">
 					<div class="photo__pic">
 						<img src="images/photo/service-3.jpg" alt="" />
 					</div>
@@ -170,7 +170,7 @@
 				</a>
 			</div>
 			<div class="photo__item">
-				<a href="#" title="">
+				<a href="our-works-photocard.html" title="">
 					<div class="photo__pic">
 						<img src="images/photo/service-4.jpg" alt="" />
 					</div>
@@ -185,7 +185,7 @@
 			</div>
 
 			<div class="photo__item">
-				<a href="#" title="">
+				<a href="our-works-photocard.html" title="">
 					<div class="photo__pic">
 						<img src="images/photo/service-5.jpg" alt="" />
 					</div>
@@ -199,7 +199,7 @@
 				</a>
 			</div>
 			<div class="photo__item">
-				<a href="#" title="">
+				<a href="our-works-photocard.html" title="">
 					<div class="photo__pic">
 						<img src="images/photo/service-6.jpg" alt="" />
 					</div>
