обновлена раздаточная и gulpfile

--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,10 @@
 	<li><a href="about.html" target="_blank">О нас</a></li>
 	<li><a href="services.html" target="_blank">Услуги</a></li>
 	<li><a href="service.html" target="_blank">Услуга</a></li>
+	<li><a href="price.html" target="_blank">Цены</a></li>
+	<li><a href="our-works-photo.html" target="_blank">Фото - каталог</a></li>
+	<li><a href="our-works-photocard.html" target="_blank">Фото - карточка</a></li>
+	<li><a href="our-works-video.html" target="_blank">Видео</a></li>
 </ol>
 
 </body>
