--- a/app/homepage.html
+++ b/app/homepage.html
@@ -402,28 +402,28 @@
 			</div>
 			<div class="tab" id="tab-articles">
 				<div class="flexbox">
-					<div class="rubrics__article">
-						<a href="#" title="" class="rubrics__article-link">
-							<div class="rubrics__article-pic"><img src="images/article-1.jpg" alt=""></div>
-							<p class="rubrics__article-title">КАК ПОМЕНЯТЬ ПОДРОЗЕТНИК</p>
+					<div class="article">
+						<a href="#" title="" class="article__link">
+							<div class="article__pic"><img src="images/article-1.jpg" alt=""></div>
+							<p class="article__title">КАК ПОМЕНЯТЬ ПОДРОЗЕТНИК</p>
 						</a>
 					</div>
-					<div class="rubrics__article">
-						<a href="#" title="" class="rubrics__article-link">
-							<div class="rubrics__article-pic"><img src="images/article-1.jpg" alt=""></div>
-							<p class="rubrics__article-title">Как правильно штробить стену</p>
+					<div class="article">
+						<a href="#" title="" class="article__link">
+							<div class="article__pic"><img src="images/article-2.jpg" alt=""></div>
+							<p class="article__title">Как правильно штробить стену</p>
 						</a>
 					</div>
-					<div class="rubrics__article">
-						<a href="#" title="" class="rubrics__article-link">
-							<div class="rubrics__article-pic"><img src="images/article-1.jpg" alt=""></div>
-							<p class="rubrics__article-title">как наростить проводку</p>
+					<div class="article">
+						<a href="#" title="" class="article__link">
+							<div class="article__pic"><img src="images/article-3.jpg" alt=""></div>
+							<p class="article__title">как наростить проводку</p>
 						</a>
 					</div>
-					<div class="rubrics__article">
-						<a href="#" title="" class="rubrics__article-link">
-							<div class="rubrics__article-pic"><img src="images/article-1.jpg" alt=""></div>
-							<p class="rubrics__article-title">прокладка проводки по полу</p>
+					<div class="article">
+						<a href="#" title="" class="article__link">
+							<div class="article__pic"><img src="images/article-4.jpg" alt=""></div>
+							<p class="article__title">прокладка проводки по полу</p>
 						</a>
 					</div>
 				</div>
