--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
 	<li><a href="our-works-photo.html" target="_blank">Фото - каталог</a></li>
 	<li><a href="our-works-photocard.html" target="_blank">Фото - карточка</a></li>
 	<li><a href="our-works-video.html" target="_blank">Видео</a></li>
+	<li><a href="articles.html" target="_blank">Статьи</a></li>
 </ol>
 
 </body>
