--- a/app/homepage.html
+++ b/app/homepage.html
@@ -369,31 +369,31 @@
 		<div class="rubrics__body">
 			<div class="tab tab-current" id="tab-news">
 				<div class="flexbox">
-					<div class="rubrics__news">
-						<div class="rubrics__news-item">
+					<div class="news">
+						<div class="news__item">
 							<time class="date">2017-09-15</time>
-							<h3 class="rubrics__news-title">Новые контроллеры WAGO с поддержкой Profibus DP Master</h3>
+							<h3 class="news__title">Новые контроллеры WAGO с поддержкой Profibus DP Master</h3>
 							<p><a href="#" title="">Серия PFC200 характеризуется компактным корпусом с широким набором сетевых ...</a></p>
 						</div>
 					</div>
-					<div class="rubrics__news">
-						<div class="rubrics__news-item">
+					<div class="news">
+						<div class="news__item">
 							<time class="date">2017-09-15</time>
-							<h3 class="rubrics__news-title">Metra - система кабельных каналов и мини-каналов</h3>
+							<h3 class="news__title">Metra - система кабельных каналов и мини-каналов</h3>
 							<p><a href="#" title="">Серия PFC200 характеризуется компактным корпусом с широким набором сетевых ...</a></p>
 						</div>
 					</div>
-					<div class="rubrics__news">
-						<div class="rubrics__news-item">
+					<div class="news">
+						<div class="news__item">
 							<time class="date">2017-09-15</time>
-							<h3 class="rubrics__news-title">ABB оснастит первое «анти-круизное» судно из коллекции яхт сети Ritz Carlton </h3>
+							<h3 class="news__title">ABB оснастит первое «анти-круизное» судно из коллекции яхт сети Ritz Carlton </h3>
 							<p><a href="#" title="">Серия PFC200 характеризуется компактным корпусом с широким набором сетевых ...</a></p>
 						</div>
 					</div>
-					<div class="rubrics__news">
-						<div class="rubrics__news-item">
+					<div class="news">
+						<div class="news__item">
 							<time class="date">2017-09-15</time>
-							<h3 class="rubrics__news-title">Открытие продаж нового модуля IFM Modbus Interface - LV434000</h3>
+							<h3 class="news__title">Открытие продаж нового модуля IFM Modbus Interface - LV434000</h3>
 							<p><a href="#" title="">Серия PFC200 характеризуется компактным корпусом с широким набором сетевых ...</a></p>
 						</div>
 					</div>
