--- a/app/news.html
+++ b/app/news.html
@@ -11,7 +11,7 @@
 
 <meta name="robots" content="noindex,nofollow" />
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Статьи</title>
+<title>Новости</title>
 <!-- InstanceEndEditable -->
 <link rel="stylesheet" href="/template/css/jquery.bxslider.css" />
 <link rel="stylesheet" href="/template/css/styles.min.css" />
@@ -106,92 +106,104 @@
 		<div class="breadcrumbs">
 			<ul class="B_crumbBox">
 				<li class="B_crumb"><a href="/" title="" class="B_crumb">главная</a></li>
-				<li class="B_lastCrumb"><span class="B_currentCrumb">статьи</span></li>
+				<li class="B_lastCrumb"><span class="B_currentCrumb">новости</span></li>
 			</ul>
 		</div>
 		<!-- =/breadcrumbs -->
-
 		
 
 		<main class="text">
-			<h1 class="title">Статьи и Полезная информация об электрике</h1>
-			<p>Осуществляем электромонтажные работы любой сложности для физических и юридических лиц. Наши электрики готовы выехать по вызову в любое время - днём и ночью, прибудут на объект не позже чем через 2 часа после звонка. В случае аварийной ситуации экстренный выезд осуществляется в течение часа.</p>
+			<h1 class="title">Новостная лента компании</h1>
+			<p>Достаточно часто у домовладельцев, которые не являются профессиональными электриками, возникают вопросы, касающиеся использования такого энергоресурса как электричество. Вот и вынуждены они искать ответы на вопросы по электрике в самых разнообразных источниках, успешно функционирующих во всемирной сети Интернет. Но, невзирая на большое разнообразие строительно-информационных ресурсов и ресурсов, посвященных сугубо электротехнике, очень часто поиски ответов заканчиваются неудачей.</p>
 		</main>
 
-		<div class="articles">
+		<div class="listnews">
 			<div class="flexbox">
-				<div class="article">
-					<a href="#" title="" class="article__link">
-						<div class="article__pic"><img src="images/article-1.jpg" alt=""></div>
-						<p class="article__title">КАК ПОМЕНЯТЬ ПОДРОЗЕТНИК</p>
-					</a>
+				<div class="news">
+					<div class="news__item">
+						<time class="date">2017-09-15</time>
+						<h3 class="news__title">Новые контроллеры WAGO с поддержкой Profibus DP Master</h3>
+						<p><a href="#" title="">Серия PFC200 характеризуется компактным корпусом с широким набором сетевых ...</a></p>
+					</div>
 				</div>
-				<div class="article">
-					<a href="#" title="" class="article__link">
-						<div class="article__pic"><img src="images/article-2.jpg" alt=""></div>
-						<p class="article__title">Как правильно штробить стену</p>
-					</a>
+				<div class="news">
+					<div class="news__item">
+						<time class="date">2017-09-13</time>
+						<h3 class="news__title">Metra - система кабельных каналов и мини-каналов</h3>
+						<p><a href="#" title="">Серия PFC200 характеризуется компактным корпусом с широким набором сетевых ...</a></p>
+					</div>
 				</div>
-				<div class="article">
-					<a href="#" title="" class="article__link">
-						<div class="article__pic"><img src="images/article-3.jpg" alt=""></div>
-						<p class="article__title">как наростить проводку</p>
-					</a>
+				<div class="news">
+					<div class="news__item">
+						<time class="date">2017-09-11</time>
+						<h3 class="news__title">ABB оснастит первое «анти-круизное» судно из коллекции яхт сети Ritz Carlton </h3>
+						<p><a href="#" title="">Серия PFC200 характеризуется компактным корпусом с широким набором сетевых ...</a></p>
+					</div>
 				</div>
-				<div class="article">
-					<a href="#" title="" class="article__link">
-						<div class="article__pic"><img src="images/article-4.jpg" alt=""></div>
-						<p class="article__title">прокладка проводки по полу</p>
-					</a>
+				<div class="news">
+					<div class="news__item">
+						<time class="date">2017-09-08</time>
+						<h3 class="news__title">Открытие продаж нового модуля IFM Modbus Interface - LV434000</h3>
+						<p><a href="#" title="">Серия PFC200 характеризуется компактным корпусом с широким набором сетевых ...</a></p>
+					</div>
 				</div>
-				<div class="article">
-					<a href="#" title="" class="article__link">
-						<div class="article__pic"><img src="images/article-5.jpg" alt=""></div>
-						<p class="article__title">Замена проводки в 1 комнатной квартире</p>
-					</a>
+				<div class="news">
+					<div class="news__item">
+						<time class="date">2017-09-06</time>
+						<h3 class="news__title">ABB впервые проводит День инноваций и технологий </h3>
+						<p><a href="#" title="">День инноваций и технологий в ABB. Впервые компания ABB пригласила инвесторов, журналистов ...</a></p>
+					</div>
 				</div>
-				<div class="article">
-					<a href="#" title="" class="article__link">
-						<div class="article__pic"><img src="images/article-6.jpg" alt=""></div>
-						<p class="article__title">Замена проводки в 2 комнатной квартире</p>
-					</a>
+				<div class="news">
+					<div class="news__item">
+						<time class="date">2017-09-04</time>
+						<h3 class="news__title">Программируемые логические контроллеры в программе поставок ПРОСОФТ</h3>
+						<p><a href="#" title="">Традиционный интерес аудитории вызывают презентации оборудования Advantech. Не последнюю ...</a></p>
+					</div>
 				</div>
-				<div class="article">
-					<a href="#" title="" class="article__link">
-						<div class="article__pic"><img src="images/article-7.jpg" alt=""></div>
-						<p class="article__title">Замена проводки в 3 комнатной квартире</p>
-					</a>
+				<div class="news">
+					<div class="news__item">
+						<time class="date">2017-09-01</time>
+						<h3 class="news__title">Источники питания WAGO EPSITRON в двухфазной и трехфазной версиях</h3>
+						<p><a href="#" title="">В дополнение к своим проверенным однофазным источникам питания серии EPSITRON, компания WAGO ...</a></p>
+					</div>
 				</div>
-				<div class="article">
-					<a href="#" title="" class="article__link">
-						<div class="article__pic"><img src="images/article-8.jpg" alt=""></div>
-						<p class="article__title">Почему выбивает автомат</p>
-					</a>
+				<div class="news">
+					<div class="news__item">
+						<time class="date">2017-08-30</time>
+						<h3 class="news__title">Новые аксессуары к клеммам WAGO: пружинные зажимы для экрана</h3>
+						<p><a href="#" title="">Новое поколение пружинных зажимов делают использование разработанной WAGO ...</a></p>
+					</div>
 				</div>
-				<div class="article">
-					<a href="#" title="" class="article__link">
-						<div class="article__pic"><img src="images/article-9.jpg" alt=""></div>
-						<p class="article__title">Что делать если дымится розетка</p>
-					</a>
+				<div class="news">
+					<div class="news__item">
+						<time class="date">2017-08-28</time>
+						<h3 class="news__title">Проведи «Яркие каникулы co Schneider Electric»!</h3>
+						<p><a href="#" title="">Schneider Electric вновь приглашает дизайнеров интерьера воплотить свои уникальные идеи в ...</a></p>
+					</div>
 				</div>
-				<div class="article">
-					<a href="#" title="" class="article__link">
-						<div class="article__pic"><img src="images/article-10.jpg" alt=""></div>
-						<p class="article__title">Как самому сделать проводку</p>
-					</a>
+				<div class="news">
+					<div class="news__item">
+						<time class="date">2017-08-25</time>
+						<h3 class="news__title">Изолента от Schneider Electric: гид по продукту </h3>
+						<p><a href="#" title="">Современная электроизоляционная лента или изолента из поливинилхлорида (ПВХ) ...</a></p>
+					</div>
 				</div>
-				<div class="article">
-					<a href="#" title="" class="article__link">
-						<div class="article__pic"><img src="images/article-11.jpg" alt=""></div>
-						<p class="article__title">Зачем нужно заземление</p>
-					</a>
+				<div class="news">
+					<div class="news__item">
+						<time class="date">2017-08-23</time>
+						<h3 class="news__title">Группа Legrand примет участие в ЭКСПО 1520</h3>
+						<p><a href="#" title="">Группа Legrand совместно со своим партнером – ГК «Спектр» – примет участие в VI Международном ...</a></p>
+					</div>
 				</div>
-				<div class="article">
-					<a href="#" title="" class="article__link">
-						<div class="article__pic"><img src="images/article-12.jpg" alt=""></div>
-						<p class="article__title">Какой кабель нужен для розеток</p>
-					</a>
+				<div class="news">
+					<div class="news__item">
+						<time class="date">2017-08-21</time>
+						<h3 class="news__title">АББ выводит концепцию «умного» дома на новый уровень благодаря решениям Amazon и Sonos</h3>
+						<p><a href="#" title="">Сегодня в ходе IFA, крупнейшей в Европе выставки потребительской электроники, которая ...</a></p>
+					</div>
 				</div>
+
 			</div>
 		</div>
 
