--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
 	<li><a href="our-works-photocard.html" target="_blank">Фото - карточка</a></li>
 	<li><a href="our-works-video.html" target="_blank">Видео</a></li>
 	<li><a href="articles.html" target="_blank">Статьи</a></li>
+	<li><a href="article.html" target="_blank">Статья</a></li>
 </ol>
 
 </body>
